Advanced search: Fix extra padding on nonexistent icon in hint button
Addresses #5978

--- a/scss/elements/_zoteroSearch.scss
+++ b/scss/elements/_zoteroSearch.scss
@@ -184,7 +184,7 @@ zoterosearch {
 		width: 0;
 		min-width: 100%;
 
-		hbox {
+		> hbox {
 			display: flex;
 			align-items: center;
 			gap: 5px;
